WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210080
Preventing touch events should not prevent gestures installed above WKWebView from recognizing
https://bugs.webkit.org/show_bug.cgi?id=210080
Summary
Preventing touch events should not prevent gestures installed above WKWebView...
Wenson Hsieh
Reported
2020-04-06 16:41:33 PDT
Preventing touches should not prevent gestures installed above WKWebView from recognizing.
Attachments
Patch
(17.26 KB, patch)
2020-04-06 22:48 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-04-06 16:42:42 PDT
<
rdar://problem/61365814
>
Wenson Hsieh
Comment 2
2020-04-06 22:48:38 PDT
Created
attachment 395654
[details]
Patch
EWS
Comment 3
2020-04-07 14:00:54 PDT
Committed
r259669
: <
https://trac.webkit.org/changeset/259669
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395654
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug